# CRUD

./: .travis.yml  CMakeLists.txt  README.md
examples/: CMakeLists.txt  main.cpp
handlers/: crud_dispatcher.hpp  crud_matcher.hpp  cud_matcher.hpp
service/: CMakeLists.txt  connection.hpp  main.cpp  persistent_connection.hpp  reply.cpp  reply.hpp  server.hpp  transient_connection.hpp
